<resources>
    <string name="app_name">VacayMate Vacation Tracker</string>
    <string name="welcome">Organize and Track all of your Vacations</string>
    <string name="dashboard">Dashboard</string>
    <string name="vacaymate">VacayMate</string>
    <string name="title_activity_add_vacation">AddVacation</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="view_excursions_for_this_vacation">Associated Excursions</string>
    <string name="vacation_title">Vacation Title</string>
    <string name="lodging_type">Lodging Type</string>
    <string name="start_date">Start Date</string>
    <string name="add_excursions_for_this_vacation">Add Excursions for this Vacation</string>
    <string name="save_vacation">SAVE VACATION</string>
    <string name="end_date">End Date</string>
    <string name="save_excursion">SAVE EXCURSION</string>
    <string name="excursion_title">Excursion Title</string>
    <string name="excursion_date">Excursion Date</string>
    <string name="delete_excursion">Delete Excursion</string>
    <string name="notify_start">Notify Start</string>
    <string name="delete_vacation">Delete Vacation</string>
    <string name="share_vacation">Share Vacation</string>
    <string name="notify_end">Notify End</string>
    <string name="add_sample_data">Add Sample Data</string>
    <string name="remove_sample_data">Remove Sample Data</string>
    <string name="channel_name">date_channel</string>
    <string name="channel_description">vacation_tracker_app</string>
</resources>