<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.MainActivity">

    <TextView
        android:id="@+id/vacaymate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="24dp"
        android:gravity="center_horizontal"
        android:text="@string/vacaymate"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="#673AB7"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.172" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="325sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:gravity="center_horizontal"
        android:text="@string/welcome"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vacaymate"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/dashboardBtn"
        android:layout_width="294dp"
        android:layout_height="76dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:gravity="center_horizontal"
        android:onClick="launchDashboard"
        android:text="@string/dashboard"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome"
        app:layout_constraintVertical_bias="0.203"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>