<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="411dp"
        android:layout_height="465dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vacation_title"
                    android:textColor="#000000"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/excursionTitle"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
                    tools:text="@tools:sample/lorem" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lodging_type"
                    android:textColor="#000000"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/lodgingType"
                    android:layout_width="201dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
                    tools:text="@tools:sample/lorem" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_date"
                    android:textColor="#000000"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <Button
                        android:id="@+id/excursionDatePickerBtn"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#80CBC4"
                        android:textAlignment="center"
                        android:textSize="25sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:rippleColor="#9C27B0"
                        tools:layout_editor_absoluteX="164dp"
                        tools:layout_editor_absoluteY="186dp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/end_date"
                    android:textColor="#000000"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:gravity="center"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/endDatePickerBtn"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#B39DDB"
                    android:rotationX="0"
                    android:textSize="25sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:rippleColor="#7B1FA2"
                    tools:layout_editor_absoluteX="164dp"
                    tools:layout_editor_absoluteY="186dp" />
            </LinearLayout>
        </LinearLayout>


    </ScrollView>

    <Button
        android:id="@+id/saveExcursionBtn"
        android:layout_width="218dp"
        android:layout_height="61dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/teal_700"
        android:onClick="onSave"
        android:text="@string/save_vacation"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollview"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>