<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="430dp"
        android:layout_height="250dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/excursion_title"
                    android:textColor="#000000"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/excursionTitle"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
                    tools:text="@tools:sample/lorem" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/excursion_date"
                    android:textColor="#000000"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <Button
                        android:id="@+id/excursionDatePickerBtn"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/purple_500"
                        android:textAlignment="center"
                        android:textSize="25sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:rippleColor="#9C27B0"
                        tools:layout_editor_absoluteX="164dp"
                        tools:layout_editor_absoluteY="186dp" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>


    </ScrollView>

    <Button
        android:id="@+id/saveExcursionBtn"
        android:layout_width="277dp"
        android:layout_height="64dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="@color/teal_700"
        android:onClick="onSave"
        android:text="@string/save_excursion"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollview" />


</androidx.constraintlayout.widget.ConstraintLayout>